--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,3 +21,6 @@
 @import "partials/blagodarnosti.scss";
 @import "partials/provider.scss";
 @import "partials/activity.scss";
+@import "partials/social-projects.scss";
+@import "partials/faq.scss";
+@import "partials/sostav.scss";
