--- a/src/views/faq.pug
+++ b/src/views/faq.pug
@@ -12,5 +12,62 @@ block content
 			.breadcrumbs__delimiter
 			li.breadcrumbs__item 
 				.breadcrumbs__link  Часто задаваемые вопросы
-
+	section.faq
+		.container
+			.faq-title Часто задаваемые вопросы
+			.faq-items
+				.faq-item
+					.faq-item__head.js-faq-item__head
+						.faq-item__head-name Что такое индивидуальная программа предоставления социальных услуг?
+						.faq-item__head-button
+					.faq-item__body(style="display:none;")
+						.faq-item__body-text Получатели социальных услуг имеют право на: <br> 1. уважительное и гуманное отношение; <br> 2. получение бесплатно в доступной форме информации о своих правах и обязанностях, видах социальных услуг, сроках, порядке и об условиях их предоставления, о тарифах на эти услуги и об их стоимости для получателя социальных услуг, о возможности получения этих услуг бесплатно, а также о поставщиках социальных услуг; <br> 3. выбор поставщика или поставщиков социальных услуг; <br> 4. отказ от предоставления социальных услуг; <br> 5. защиту своих прав и законных интересов в соответствии с законодательством Российской Федерации; <br> 6. участие в составлении индивидуальных программ; <br> 7. обеспечение условий пребывания в организациях социального обслуживания, соответствующих санитарно-гигиеническим требованиям, а также на надлежащий уход; <br> 8. свободное посещение законными представителями, адвокатами, нотариусами, представителями общественных и (или) иных организаций, священнослужителями, а также родственниками и другими лицами в дневное и вечернее время; <br> 9. социальное сопровождение.
+				.faq-item
+					.faq-item__head.js-faq-item__head
+						.faq-item__head-name Кто предоставляет гражданам социальные услуги?
+						.faq-item__head-button
+					.faq-item__body(style="display:none;")
+						.faq-item__body-text Получатели социальных услуг имеют право на: <br> 1. уважительное и гуманное отношение; <br> 2. получение бесплатно в доступной форме информации о своих правах и обязанностях, видах социальных услуг, сроках, порядке и об условиях их предоставления, о тарифах на эти услуги и об их стоимости для получателя социальных услуг, о возможности получения этих услуг бесплатно, а также о поставщиках социальных услуг; <br> 3. выбор поставщика или поставщиков социальных услуг; <br> 4. отказ от предоставления социальных услуг; <br> 5. защиту своих прав и законных интересов в соответствии с законодательством Российской Федерации; <br> 6. участие в составлении индивидуальных программ; <br> 7. обеспечение условий пребывания в организациях социального обслуживания, соответствующих санитарно-гигиеническим требованиям, а также на надлежащий уход; <br> 8. свободное посещение законными представителями, адвокатами, нотариусами, представителями общественных и (или) иных организаций, священнослужителями, а также родственниками и другими лицами в дневное и вечернее время; <br> 9. социальное сопровождение.
+				.faq-item
+					.faq-item__head.js-faq-item__head
+						.faq-item__head-name Какими правами наделены получатели социальных услуг?
+						.faq-item__head-button
+					.faq-item__body(style="display:none;")
+						.faq-item__body-text Получатели социальных услуг имеют право на: <br> 1. уважительное и гуманное отношение; <br> 2. получение бесплатно в доступной форме информации о своих правах и обязанностях, видах социальных услуг, сроках, порядке и об условиях их предоставления, о тарифах на эти услуги и об их стоимости для получателя социальных услуг, о возможности получения этих услуг бесплатно, а также о поставщиках социальных услуг; <br> 3. выбор поставщика или поставщиков социальных услуг; <br> 4. отказ от предоставления социальных услуг; <br> 5. защиту своих прав и законных интересов в соответствии с законодательством Российской Федерации; <br> 6. участие в составлении индивидуальных программ; <br> 7. обеспечение условий пребывания в организациях социального обслуживания, соответствующих санитарно-гигиеническим требованиям, а также на надлежащий уход; <br> 8. свободное посещение законными представителями, адвокатами, нотариусами, представителями общественных и (или) иных организаций, священнослужителями, а также родственниками и другими лицами в дневное и вечернее время; <br> 9. социальное сопровождение.
+				.faq-item
+					.faq-item__head.js-faq-item__head
+						.faq-item__head-name Что является основание для рассмотрения вопроса о предоставлении гражданину социального обслуживания?
+						.faq-item__head-button
+					.faq-item__body(style="display:none;")
+						.faq-item__body-text Получатели социальных услуг имеют право на: <br> 1. уважительное и гуманное отношение; <br> 2. получение бесплатно в доступной форме информации о своих правах и обязанностях, видах социальных услуг, сроках, порядке и об условиях их предоставления, о тарифах на эти услуги и об их стоимости для получателя социальных услуг, о возможности получения этих услуг бесплатно, а также о поставщиках социальных услуг; <br> 3. выбор поставщика или поставщиков социальных услуг; <br> 4. отказ от предоставления социальных услуг; <br> 5. защиту своих прав и законных интересов в соответствии с законодательством Российской Федерации; <br> 6. участие в составлении индивидуальных программ; <br> 7. обеспечение условий пребывания в организациях социального обслуживания, соответствующих санитарно-гигиеническим требованиям, а также на надлежащий уход; <br> 8. свободное посещение законными представителями, адвокатами, нотариусами, представителями общественных и (или) иных организаций, священнослужителями, а также родственниками и другими лицами в дневное и вечернее время; <br> 9. социальное сопровождение.
+				.faq-item
+					.faq-item__head.js-faq-item__head
+						.faq-item__head-name В каких случаях допускается предоставление информации о получателе социальных услуг без его согласия?
+						.faq-item__head-button
+					.faq-item__body(style="display:none;")
+						.faq-item__body-text Получатели социальных услуг имеют право на: <br> 1. уважительное и гуманное отношение; <br> 2. получение бесплатно в доступной форме информации о своих правах и обязанностях, видах социальных услуг, сроках, порядке и об условиях их предоставления, о тарифах на эти услуги и об их стоимости для получателя социальных услуг, о возможности получения этих услуг бесплатно, а также о поставщиках социальных услуг; <br> 3. выбор поставщика или поставщиков социальных услуг; <br> 4. отказ от предоставления социальных услуг; <br> 5. защиту своих прав и законных интересов в соответствии с законодательством Российской Федерации; <br> 6. участие в составлении индивидуальных программ; <br> 7. обеспечение условий пребывания в организациях социального обслуживания, соответствующих санитарно-гигиеническим требованиям, а также на надлежащий уход; <br> 8. свободное посещение законными представителями, адвокатами, нотариусами, представителями общественных и (или) иных организаций, священнослужителями, а также родственниками и другими лицами в дневное и вечернее время; <br> 9. социальное сопровождение.
+				.faq-item
+					.faq-item__head.js-faq-item__head
+						.faq-item__head-name Может ли индивидуальная программа быть пересмотрена?
+						.faq-item__head-button
+					.faq-item__body(style="display:none;")
+						.faq-item__body-text Получатели социальных услуг имеют право на: <br> 1. уважительное и гуманное отношение; <br> 2. получение бесплатно в доступной форме информации о своих правах и обязанностях, видах социальных услуг, сроках, порядке и об условиях их предоставления, о тарифах на эти услуги и об их стоимости для получателя социальных услуг, о возможности получения этих услуг бесплатно, а также о поставщиках социальных услуг; <br> 3. выбор поставщика или поставщиков социальных услуг; <br> 4. отказ от предоставления социальных услуг; <br> 5. защиту своих прав и законных интересов в соответствии с законодательством Российской Федерации; <br> 6. участие в составлении индивидуальных программ; <br> 7. обеспечение условий пребывания в организациях социального обслуживания, соответствующих санитарно-гигиеническим требованиям, а также на надлежащий уход; <br> 8. свободное посещение законными представителями, адвокатами, нотариусами, представителями общественных и (или) иных организаций, священнослужителями, а также родственниками и другими лицами в дневное и вечернее время; <br> 9. социальное сопровождение.
+				.faq-item
+					.faq-item__head.js-faq-item__head
+						.faq-item__head-name Как часто пересматривается Индивидуальная программа?
+						.faq-item__head-button
+					.faq-item__body(style="display:none;")
+						.faq-item__body-text Получатели социальных услуг имеют право на: <br> 1. уважительное и гуманное отношение; <br> 2. получение бесплатно в доступной форме информации о своих правах и обязанностях, видах социальных услуг, сроках, порядке и об условиях их предоставления, о тарифах на эти услуги и об их стоимости для получателя социальных услуг, о возможности получения этих услуг бесплатно, а также о поставщиках социальных услуг; <br> 3. выбор поставщика или поставщиков социальных услуг; <br> 4. отказ от предоставления социальных услуг; <br> 5. защиту своих прав и законных интересов в соответствии с законодательством Российской Федерации; <br> 6. участие в составлении индивидуальных программ; <br> 7. обеспечение условий пребывания в организациях социального обслуживания, соответствующих санитарно-гигиеническим требованиям, а также на надлежащий уход; <br> 8. свободное посещение законными представителями, адвокатами, нотариусами, представителями общественных и (или) иных организаций, священнослужителями, а также родственниками и другими лицами в дневное и вечернее время; <br> 9. социальное сопровождение.
+				.faq-item
+					.faq-item__head.js-faq-item__head
+						.faq-item__head-name Какой перечень документов, необходимых для постановки на учет на социальное обслуживание?
+						.faq-item__head-button
+					.faq-item__body(style="display:none;")
+						.faq-item__body-text Получатели социальных услуг имеют право на: <br> 1. уважительное и гуманное отношение; <br> 2. получение бесплатно в доступной форме информации о своих правах и обязанностях, видах социальных услуг, сроках, порядке и об условиях их предоставления, о тарифах на эти услуги и об их стоимости для получателя социальных услуг, о возможности получения этих услуг бесплатно, а также о поставщиках социальных услуг; <br> 3. выбор поставщика или поставщиков социальных услуг; <br> 4. отказ от предоставления социальных услуг; <br> 5. защиту своих прав и законных интересов в соответствии с законодательством Российской Федерации; <br> 6. участие в составлении индивидуальных программ; <br> 7. обеспечение условий пребывания в организациях социального обслуживания, соответствующих санитарно-гигиеническим требованиям, а также на надлежащий уход; <br> 8. свободное посещение законными представителями, адвокатами, нотариусами, представителями общественных и (или) иных организаций, священнослужителями, а также родственниками и другими лицами в дневное и вечернее время; <br> 9. социальное сопровождение.
+				.faq-item
+					.faq-item__head.js-faq-item__head
+						.faq-item__head-name Кто имеет право на предоставление дополнительной меры социальной поддержки в виде доставки отдельных категорий граждан к объектам социальной инфраструктуры?
+						.faq-item__head-button
+					.faq-item__body(style="display:none;")
+						.faq-item__body-text Получатели социальных услуг имеют право на: <br> 1. уважительное и гуманное отношение; <br> 2. получение бесплатно в доступной форме информации о своих правах и обязанностях, видах социальных услуг, сроках, порядке и об условиях их предоставления, о тарифах на эти услуги и об их стоимости для получателя социальных услуг, о возможности получения этих услуг бесплатно, а также о поставщиках социальных услуг; <br> 3. выбор поставщика или поставщиков социальных услуг; <br> 4. отказ от предоставления социальных услуг; <br> 5. защиту своих прав и законных интересов в соответствии с законодательством Российской Федерации; <br> 6. участие в составлении индивидуальных программ; <br> 7. обеспечение условий пребывания в организациях социального обслуживания, соответствующих санитарно-гигиеническим требованиям, а также на надлежащий уход; <br> 8. свободное посещение законными представителями, адвокатами, нотариусами, представителями общественных и (или) иных организаций, священнослужителями, а также родственниками и другими лицами в дневное и вечернее время; <br> 9. социальное сопровождение.
 	.simple-pre-footer
