--- a/src/views/social_projects.pug
+++ b/src/views/social_projects.pug
@@ -13,4 +13,169 @@ block content
 			li.breadcrumbs__item 
 				.breadcrumbs__link  Социальные проекты
 
+	section.section-text-on-bg.section-text-on-bg--soc-projects(style="background-image:url(img/clouds.jpg);")
+		.container
+			h1.soc-proj-title.h2.tac СОЦИАЛЬНЫЕ ПРОЕКТЫ
+			.simple-tabs
+				.simple-tabs__tab.simple-tabs__tab--active.js-simple-tab-control(data-target="soc-project-1") Система долговременного ухода
+				.simple-tabs__tab.js-simple-tab-control(data-target="soc-project-2") Оказание социальной помощи на дому
+				.simple-tabs__tab.js-simple-tab-control(data-target="soc-project-3") Радость в каждом движении
+				.simple-tabs__tab.js-simple-tab-control(data-target="soc-project-4") Фронт добра
+		.soc-proj-top-text-section
+			.container.container--973
+				.tabs-content
+					.tabs-content__tab.tabs-content__tab--active.js-simple-tab-target(data-id="soc-project-1" style="display:block;")
+						.simple-text.simple-text--lh-120.simple-text--mob-lh-150.simple-text--simple-dark-links.simple-text-tiltes.simple-text-tiltes--centred
+							h2 «МЫ ЕДИНЫ - СИСТЕМА ДОЛГОВРЕМЕННОГО УХОДА»
+							p Население России, как и население других стран мира, стареет: сегодня каждый четвёртый житель нашей страны — пенсионер. Еще одной значительно большой группой выделяют граждан с ограниченными возможностями здоровья вне зависимости от возраста. В ходе своей деятельности мы постоянно сталкиваемся с ситуацией, когда человек остается наедине в решении возникающих проблем быта или по части ухода за собой. В темпе современного мира родные не успевают оказывать должную заботу или во все выясняется, что их у нуждающегося нет, а услуги социального работника не способны покрыть весь дефицит самообслуживания.
+					.tabs-content__tab.js-simple-tab-target(data-id="soc-project-2")
+						.simple-text.simple-text--lh-120.simple-text--mob-lh-150.simple-text--simple-dark-links.simple-text-tiltes.simple-text-tiltes--centred
+							h2 ОКАЗАНИЕ СОЦИАЛЬНОЙ ПОМОЩИ НА ДОМУ
+							p Очень часто человек остается один при выходе на пенсию, нарушении здоровья, инвалидности. Забота родных очень важна, но порой ее недостаточно, а иногда человек и во все не имеет семьи. Чувство одиночества, безысходности – бич современности. Помочь справиться с данной проблемой, повысить качество жизни граждан, попавших в трудную жизненную ситуацию – главная задача нашей организации.
+							p С 2018 года наши сотрудники предоставляют пакет социально-бытовых услуг и социально-психологического патронажа на дому. Уже более 300 обратившихся граждан города Ростова-на-Дону получили разностороннюю помощь согласно индивидуальным заявкам.
+					.tabs-content__tab.js-simple-tab-target(data-id="soc-project-3")
+						.simple-text.simple-text--lh-120.simple-text--mob-lh-150.simple-text--simple-dark-links.simple-text-tiltes.simple-text-tiltes--centred
+							h2 ПУНКТ ПРОКАТА РЕАБИЛИТАЦИОННЫХ СРЕДСТВ «РАДОСТЬ В КАЖДОМ ДВИЖЕНИИ»
+							p Проект направлен на реабилитацию и социальную защиту лиц преклонного возраста, инвалидов и других категорий граждан города Ростова-на-Дону и Ростовской области, нуждающихся в технических средствах реабилитации (далее – ТСР). В ходе мониторинга была выявлена потребность населения во временном обеспечении их техническими средствами реабилитации на период восстановления после травм, профилактики и лечения заболеваний до получения их в фонде социального страхования.
+							p На базе нашей организации создается доступный пункт безвозмездного проката ТСР, что станет весомой поддержкой и срочным решением острых проблем в экстремальных ситуациях целевой аудитории.
+					.tabs-content__tab.js-simple-tab-target(data-id="soc-project-4")
+						.simple-text.simple-text--lh-120.simple-text--mob-lh-150.simple-text--simple-dark-links.simple-text-tiltes.simple-text-tiltes--centred
+							h2 ПУНКТ ПРОКАТА РЕАБИЛИТАЦИОННЫХ СРЕДСТВ «РАДОСТЬ В КАЖДОМ ДВИЖЕНИИ»
+							p Проект направлен на реабилитацию и социальную защиту лиц преклонного возраста, инвалидов и других категорий граждан города Ростова-на-Дону и Ростовской области, нуждающихся в технических средствах реабилитации (далее – ТСР). В ходе мониторинга была выявлена потребность населения во временном обеспечении их техническими средствами реабилитации на период восстановления после травм, профилактики и лечения заболеваний до получения их в фонде социального страхования.
+							p На базе нашей организации создается доступный пункт безвозмездного проката ТСР, что станет весомой поддержкой и срочным решением острых проблем в экстремальных ситуациях целевой аудитории.
+
+	section.soc-proj-main-section.simple-text.simple-text--lh-120.simple-text--mob-lh-150
+		.container.container--973
+			.tabs-content
+				.tabs-content__tab.tabs-content__tab--active.js-simple-tab-target(data-id="soc-project-1"  style="display:block;")
+					.soc-proj-info
+						.soc-proj-info__part
+							h3 ЦЕЛИ ПРОГРАММЫ:
+							ul
+								li обеспечение граждан, нуждающихся в уходе, поддержкой их жизнедеятельности, которая позволит им максимально долго сохранять привычное качество жизни;
+								li сохранить человеческое достоинство человека в любом состоянии;
+								li оказание поддержки гражданам, осуществляющим уход.
+						.soc-proj-info__part
+							h3 ЗАДАЧИ ПРОГРАММЫ:
+							ul
+								li Обеспечения постороннего (постоянного) ухода — СДУ — система не имеет возрастных ограничений и относится ко всем людям, имеющим те или иные функциональные нарушения, ограничивающие возможности самостоятельного ухода;
+								li Реабилитацию и социальную защиту лиц преклонного возраста, инвалидов и других категорий граждан, нуждающихся в технических средствах реабилитации (ТСР);
+								li Поддержка целевой аудитории наборами противопролежневых и иных средств по уходу;
+								li Организация школы ухода и психологической разгрузки для родных благополучателей, социальных работников, волонтеров;
+								li Повышение уровня компетенции лиц, осуществляющих уход.
+						.soc-proj-info__part
+							h3 ЦЕЛЕВАЯ АУДИТОРИЯ:
+							ul
+								li Пенсионеры, включая больных деменцией;
+								li Граждане с инвалидностью;
+								li Маломобильные пациенты;
+								li Граждане, оказывающие надомную помощь нуждающимся;
+								li Родственники, осуществляющие уход.
+						.soc-proj-info__part
+							h3 ТЕРРИТОРИАЛЬНЫЙ ОХВАТ ПРОГРАММЫ:
+							ul 
+								li г. Ростов-на-Дону
+						.soc-proj-info__part
+							h3 ОКАЗЫВАЕМАЯ ПОМОЩЬ В РАМКАХ ПРОГРАММЫ:
+							ul 
+								li В рамках проекта «Мы едины — система долговременного ухода» запускается структурированная система комплексных мер по долговременному уходу на территории города Ростова-на-Дону для граждан пожилого возраста и инвалидов: вводятся в работу квалифицированные сидели, привлекаются на практическое консультирование медицинские сотрудники, молодые волонтеры, обеспечивается поддержка необходимым медицинским оборудованием и наборами различных средств по уходу, проводятся семинары по повышению квалификации граждан, оказывающих надомный уход, обучения по уходу за болящим и по снятию эмоционального напряжения родственников. Важнейшей задачей социального проекта «Мы едины — система долговременного ухода» является снижение уровня социальной напряженности по самообслуживанию маломобильных граждан в городе Ростове-на-Дону путем создания комплекса согласованных мер по оказанию качественной поддержки разных структур таких граждан — формирования системы долговременного ухода в городе.
+								li Данный комплекс мер помощи способствует устранению или возможно полной компенсации ограничений жизнедеятельности нуждающегося, повышает уровень качества жизни опекаемого, снимает внутрисемейное эмоциональное напряжение, а также способствует реализации национального проекта «Демография» по направлению «Старшее поколение» в регионе.
+				.tabs-content__tab.js-simple-tab-target(data-id="soc-project-2")
+					.soc-proj-info
+						.soc-proj-info__part
+							h3 ЦЕЛИ ПРОГРАММЫ:
+							ul
+								li предоставление социально-полезных услуг в сфере профилактики и охраны здоровья граждан;
+								li улучшения морально-психологического состояния граждан;
+								li повышения качества жизнедеятельности благополучателя.
+
+						.soc-proj-info__part
+							h3 ЗАДАЧИ ПРОГРАММЫ:
+							ul
+								li Оказание социальных услуг разного типа: помощь по хозяйству, приготовление пищи, сопровождение в медицинские учреждения и прочее;
+								li Поддержка целевой аудитории наборами противопролежневых и иных средств по уходу, а также гуманитарными наборами (продуктовыми, средствами личной гигиены, бытовой химией);
+								li Оказание срочных услуг (передача готовых горячих блюд, первых и вторых);
+								li Соблюдение санитарных норм;
+								li Повышение уровня компетенции лиц, осуществляющих уход.
+
+						.soc-proj-info__part
+							h3 ЦЕЛЕВАЯ АУДИТОРИЯ:
+							ul
+								li Пенсионеры, включая больных деменцией;
+								li Граждане с инвалидностью;
+								li Маломобильные пациенты;
+								li Малоимущие многодетные семьи, семьи с детьми-инвалидами.
+
+						.soc-proj-info__part
+							h3 ТЕРРИТОРИАЛЬНЫЙ ОХВАТ ПРОГРАММЫ:
+							ul
+								li г. Ростов-на-Дону, р-н Ворошиловский
+
+						.soc-proj-info__part
+							h3 ОКАЗЫВАЕМАЯ ПОМОЩЬ В РАМКАХ ПРОГРАММЫ:
+							ul
+								li Наши сотрудники ежедневно оказывают нуждающимся гражданам необходимые услуги для поддержания достойного уровня качества их жизни. Они являются специалистами своего дела и проявляют к благополучателям максимальную чуткость, вежливость, внимание, выдержку, предусмотрительность, терпение, учитывают их физическое и психическое состояние. Мы стараемся не просто хорошо выполнять данную работу, но и оказывать всяческую заботу и поддержку на семейном уровне – чтобы чувство одиночества и давление от внезапно возникших финансовых, социальных, медицинских проблем не сломили человека и не омрачили его жизнь. На ровне с предоставляемыми услугами оказывается посильная помощь ежемесячными гуманитарными наборами: продуктами, средствами личной гигиены, бытовой химией, а также постельными принадлежностями, мебелью, медикаментами и техническими средствами.
+				.tabs-content__tab.js-simple-tab-target(data-id="soc-project-3")
+					.soc-proj-info
+						.soc-proj-info__part
+							h3 ЦЕЛИ ПРОГРАММЫ:
+							ul
+								li Предоставление нуждающимся технических средств реабилитации согласно их индивидуальной заявке, медицинским показаниям.
+
+						.soc-proj-info__part
+							h3 ЗАДАЧИ ПРОГРАММЫ:
+							ul
+								li Обеспечение маломобильных граждан необходимыми ТСР на период реабилитации или до получения их в фонде социального страхования;
+								li Повышение уровня качества жизнедеятельности целевой аудитории.
+
+						.soc-proj-info__part
+							h3 ЦЕЛЕВАЯ АУДИТОРИЯ:
+							ul
+								li Маломобильные граждане, нуждающихся в технических средствах реабилитации на период восстановления после травм, профилактики и лечения заболеваний или до получения их в фонде социального страхования.
+
+						.soc-proj-info__part
+							h3 ТЕРРИТОРИАЛЬНЫЙ ОХВАТ ПРОГРАММЫ:
+							ul
+								li г. Ростов-на-Дону, Ростовская область.
+
+						.soc-proj-info__part
+							h3 ОКАЗЫВАЕМАЯ ПОМОЩЬ В РАМКАХ ПРОГРАММЫ:
+							ul
+								li Обеспечение техническими средствами реабилитации нуждающихся в них граждан способствует комплексной мере реабилитации по устранению или возможно полной компенсации ограничений жизнедеятельности, вызванных нарушением здоровья со стойким расстройством функций организма. Это даст возможность гражданам преклонного возраста, инвалидам и другим категориям нуждающихся лиц вести независимый образ жизни и всесторонне участвовать во всех аспектах жизни наравне с другими людьми: выполнять обыденные дела по дому, свободно передвигаться в обществе, получать разные услуги (транспортные, информационные и прочие), способствует материальной независимости, а также окажет действенную помощь родным в уходе за благоплучателями. Все это безусловно благотворно влияет и на эмоционально-психологическом состоянии обращающихся за помощью граждан, на взаимоотношения внутри семьи получателя помощи.
+				.tabs-content__tab.js-simple-tab-target(data-id="soc-project-4")
+					.soc-proj-info
+						.soc-proj-info__part
+							h3 ЦЕЛИ ПРОГРАММЫ:
+							ul
+								li Оказание гуманитарной помощи целевой аудитории.
+
+
+						.soc-proj-info__part
+							h3 ЗАДАЧИ ПРОГРАММЫ:
+							ul
+								li Обеспечение лиц, попавших в критическую жизненную ситуацию, предметами первой необходимости;
+
+								li Повышение уровня качества жизнедеятельности целевой аудитории.
+
+						.soc-proj-info__part
+							h3 ЦЕЛЕВАЯ АУДИТОРИЯ:
+							ul
+								li Многодетные семьи, попавшие в трудную жизненную ситуацию;
+
+								li Малообеспеченные семьи;
+
+								li Неполные семьи, попавшие в критическую жизненную ситуацию;
+
+								li Иные граждане, попавшие в трудную жизненную ситуацию.
+
+						.soc-proj-info__part
+							h3 ТЕРРИТОРИАЛЬНЫЙ ОХВАТ ПРОГРАММЫ:
+							ul
+								li г. Ростов-на-Дону, Ростовская область.
+
+						.soc-proj-info__part
+							h3 ОКАЗЫВАЕМАЯ ПОМОЩЬ В РАМКАХ ПРОГРАММЫ:
+							ul
+								li Ведется сбор гуманитарной помощи и дальнейшая передача ее благополучателям по индивидуальным прошениям: одежда и обувь взрослая и детская как новая, так и бывшая в употреблении, не требующая ремонта и стирки, средства гигиены для взрослых и детей, продукты питания первой необходимости: макароны, крупы, консервные продукты, подсолнечное масло и т.п., школьные принадлежности, памперсы детские любых размеров.
+
 	.simple-pre-footer
