--- a/src/views/sostav.pug
+++ b/src/views/sostav.pug
@@ -15,5 +15,55 @@ block content
 			.breadcrumbs__delimiter
 			li.breadcrumbs__item 
 				.breadcrumbs__link  Сведения о персональном составе работников
+	.container 
+		.sostav-title Сведения о персональном составе работников
+	section.director
+		.container.container--973
+			.director-wrap
+				.director-img
+					img(src="img/director.jpg", alt="")
+				.director-info
+					.director-info__name Евгений Иванович Осяк
+					.director-info__post Директор АНО СОБСПЗГ «Милосердие-на-Дону»
+					.director-info__text.simple-text
+						p с мая 2018 года. Имеет несколько высших образований, в том числе диплом РГУПС по направлению «социальная работа». Стаж работы ведется с 2012 года.Руководитель ряда социально-ориентированных благотворительных проектов, председатель попечительского совета МБУ СО «Реабилитационный центр для детей — инвалидов и детей с ограниченными возможностями здоровья города Ростова-на- Дону».Имеет награды: Знак Губернатора Ростовской области «ЗА МИЛОСЕРДИЕ И БЛАГОТВОРИТЕЛЬНОСТЬ», медаль «За содружество во имя спасения» Министерства Российской Федерации по делам гражданской обороны, чрезвычайным ситуациям и ликвидации последствий стихийных бедствий, за добросовестное и эффективное исполнение мероприятий, связанных с организацией приема и размещения граждан, вынужденно покинувших территорию Украины, Почетная медаль «За защиту Семьи и Детства».
+	section.sostav
+		.container.container--973
+			.sostav-items
+				.sostav-item
+					.sostav-item-img 
+						img(src="img/news-detail.jpg")
+					.sostav-item-info
+						.sostav-item-info__name Дарья Михайловна Башлаева
+						.sostav-item-info__post Заместитель директора АНО СОБСПЗГ «Милосердие-на-Дону»
+						.sostav-item-info__text.simple-text 
+							p Имеет несколько высших образований, в том числе ГБОУ ДПО РО ЦПКСМФО по направлению «Младшая медицинская сестра по уходу за больными». В 2022 году получила дополнительное образование АНО ДПО ГТУ по направлению «Организация деятельности по реализации социальных услуг: менеджмент и социальная работа». Стаж работы ведется с 2008 года.С 2010 года ведет различные работы в социальной сфере от волонтера до организатора-координатора: с многодетными семьями, детьми из детских домов, приютов в г. Ростове-на-Дону и РО, оказание помощи престарелым гражданам и др.; поддержка людей, получивших тяжелые физические и психологические травмы; уход за лежачими. Участвовала в эфирах на радио и телевидении по темам социального служения.
+				.sostav-item
+					.sostav-item-img 
+						img(src="img/news-detail.jpg")
+					.sostav-item-info
+						.sostav-item-info__name Екатерина Ивановна Еремеевская
+						.sostav-item-info__post Заведующий отделением социального обслуживания на дому
+						.sostav-item-info__text.simple-text 
+							p с сентября 2021 года. Имеет несколько высших образований. В 2022 году получила дополнительное образование АНО ДПО ГТУ по направлению «Организация деятельности по реализации социальных услуг: менеджмент и социальная работа». Стаж работы ведется с 1997 года.Принимает участие в социально-ориентированных проектах в качестве социального работника, ведет активную патриотическую деятельность с детьми и подростками.
+				.sostav-item
+					.sostav-item-img 
+						img(src="img/news-detail.jpg")
+					.sostav-item-info
+						.sostav-item-info__name Татьяна Васильевна Афанасьева
+						.sostav-item-info__post Бухгалтер-кадровик АНО СОБСПЗГ «Милосердие-на-Дону»
+						.sostav-item-info__text.simple-text 
+							p с октября 2021 года. Имеет несколько высших образований, в том числе по направлению «Организация кадрового делопроизводства для специалиста кадровой службы». Стаж работы ведется с 2003 года.Занимает активную социально-ориентированную позицию по оказанию помощи гражданам, попавшим в тяжелые жизненные ситуации, принимает участие в благотворительных мероприятиях.
+	section.workers-social 
+		.container
+			.workers-social-img
+				img(src="https://placekitten.com/1175/555", alt="")
+			.workers-social-title Отдел социального обслуживания на дому: социальные работники
+			.workers-social-text.simple-text
+				p В организации трудится 19 работников на должности социальный работник. Каждый имеет специализированное профильное образование. Для проведения качественной работы сотрудники ежегодно проходят медицинский осмотр, участвуют в курсах повышения квалификации. Стаж работы по направлению деятельности отдела: менее 1 года – 2, от 1 года до 5 лет – 5, от 5 до 10 лет — 1, от 10 до 15 лет – 1, свыше 15 — 11Социальные работники помогают Благополучателям поддерживать чистоту в месте проживания, проводят санитарно-гигиенические процедуры, оказывают помощь по закупке и доставке продуктовых наборов, приготовлении пищи, ремонту вещей и решение других жизненно важных вопросов, оказывают морально-психологическую поддержку.
 
+
+
+
+			
 	.simple-pre-footer
