--- a/src/styles/partials/news-detail.scss
+++ b/src/styles/partials/news-detail.scss
@@ -10,6 +10,16 @@
 			line-height: 120%;
 		}
 	}
+	&--lh-120 {
+			line-height: 120%;
+	}
+
+	&--mob-lh-150 {
+		@include max('md') {
+			line-height: 150%;
+			
+		}
+	}
 
 	p {}
 
@@ -24,7 +34,27 @@
 
 	ol {}
 
-	ul {}
+	ul {
+		
+		li {
+			list-style: none;
+			padding-left: 24px;
+			position: relative;
+			display: block;
+
+			&::before {
+				content: '';
+				display: block;
+				width: 5px;
+				height: 5px;
+				border-radius: 50%;
+				background: #000;
+				top: 8px;
+				left: 9px;
+				position: absolute;
+			}
+		}
+	}
 
 	a {
 		text-decoration: underline;
@@ -37,19 +67,22 @@
 	}
 }
 
-.news-detail{
+.news-detail {
 	margin-top: 25px;
-	@include max('md'){
+
+	@include max('md') {
 		margin-top: 20px;
 	}
 }
+
 .news-detail-inner {
 	padding-left: 101px;
 	padding-right: 101px;
-	@include max('md'){
+
+	@include max('md') {
 		padding-left: 0px;
 		padding-right: 0px;
-		
+
 	}
 }
 
@@ -60,7 +93,8 @@
 	font-style: normal;
 	font-weight: 600;
 	line-height: 40px;
-	@include max('md'){
+
+	@include max('md') {
 		display: none;
 	}
 }
@@ -69,8 +103,10 @@
 	margin-top: 65px;
 	display: flex;
 	align-items: center;
-	@include max('md'){
-		margin-top: 0px;;
+
+	@include max('md') {
+		margin-top: 0px;
+		;
 	}
 
 	&__icon {
@@ -92,14 +128,16 @@
 
 .news-detail-top-pic {
 	margin-top: 18px;
-	@include max('md'){
+
+	@include max('md') {
 		margin-top: 11px;
 	}
 
 	img {
 		width: 100%;
 		height: auto;
-		@include max('md'){
+
+		@include max('md') {
 			border-radius: 12px;
 		}
 	}
@@ -107,22 +145,26 @@
 
 .news-detail-text {
 	margin-top: 32px;
-	@include max('md'){
+
+	@include max('md') {
 		margin-top: 12px;
 	}
 }
-.simple-text--lh-mob-150{
-	p{
-		@include max('md'){
-		line-height: 150%;
+
+.simple-text--lh-mob-150 {
+	p {
+		@include max('md') {
+			line-height: 150%;
 		}
 	}
 }
+
 .gallery {
 	margin-top: 59px;
 	padding-bottom: 60px;
 	position: relative;
-	@include max('md'){
+
+	@include max('md') {
 		margin-top: 24px;
 		padding-bottom: 48px;
 	}
@@ -146,7 +188,8 @@
 		bottom: -18px;
 		width: 72px;
 		height: 2px;
-		@include max('md'){
+
+		@include max('md') {
 			display: none;
 		}
 	}
@@ -155,7 +198,8 @@
 .gallery-slider {
 	margin-top: 36px;
 	position: relative;
-	@include max('md'){
+
+	@include max('md') {
 		margin-top: 11px;
 	}
 
@@ -169,7 +213,8 @@
 		top: 0;
 		width: 25%;
 		height: 100%;
-		@include max('md'){
+
+		@include max('md') {
 			display: none;
 		}
 	}
@@ -189,7 +234,8 @@
 	max-width: 100%;
 	display: block;
 	@include hov();
-	@include max('md'){
+
+	@include max('md') {
 		width: 325px;
 		margin-left: 9px;
 	}
@@ -198,7 +244,8 @@
 		content: "";
 		display: block;
 		padding-top: 75%;
-		@include max('md'){
+
+		@include max('md') {
 			padding-top: 74.92%;
 		}
 	}
@@ -211,7 +258,8 @@
 		height: 100%;
 		object-fit: cover;
 		object-position: center center;
-		@include max('md'){
+
+		@include max('md') {
 			border-radius: 12px;
 		}
 	}
@@ -219,13 +267,14 @@
 
 .comment-box {
 	background: var(--blue-2, #D8F0FC);
-	
+
 }
 
 .comment-form {
 	padding-top: 40px;
 	padding-bottom: 40px;
-	@include max('md'){
+
+	@include max('md') {
 		padding-top: 41px;
 	}
 
@@ -236,7 +285,8 @@
 		font-style: normal;
 		font-weight: 600;
 		line-height: normal;
-		@include max('md'){
+
+		@include max('md') {
 			font-size: 20px;
 			font-weight: 500;
 			line-height: 21px;
@@ -245,7 +295,8 @@
 
 	&__text {
 		margin-top: 24px;
-		@include max('md'){
+
+		@include max('md') {
 			margin-top: 12px;
 		}
 	}
@@ -258,22 +309,25 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 	margin-left: -21px;
-	@include max('md'){
+
+	@include max('md') {
 		margin-left: 0;
 		margin-top: 15px;
 		display: block;
 	}
-	
+
 }
 
 .comment-form-field {
 	width: calc(33.33% - 21px);
 	margin-left: 21px;
 	margin-bottom: 21px;
-	@media screen and (max-width: 896px){
+
+	@media screen and (max-width: 896px) {
 		width: calc(50% - 21px);
 	}
-	@include max('md'){
+
+	@include max('md') {
 		width: 100%;
 		margin-left: 0px;
 	}
@@ -284,7 +338,8 @@
 		font-style: normal;
 		font-weight: 400;
 		line-height: normal;
-		@include max('md'){
+
+		@include max('md') {
 			font-size: 16px;
 			line-height: 24px;
 
@@ -300,25 +355,30 @@
 		width: 100%;
 		margin-top: 14px;
 		overflow: hidden;
-		@include max('md'){
+
+		@include max('md') {
 			margin-top: 9px;
 		}
 	}
 }
-.comment-textarea-wrap{
+
+.comment-textarea-wrap {
 	margin-top: 12px;
-	@include max('md'){
+
+	@include max('md') {
 		margin-top: 31px;
 	}
 }
-.comment-textarea-name{
+
+.comment-textarea-name {
 	color: #000;
 	font-size: 20px;
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
 }
-.comment-textarea{
+
+.comment-textarea {
 	width: 100%;
 	border-radius: 12px;
 	border: 1px solid var(--grey, #7C7C7D);
@@ -327,30 +387,35 @@
 	min-height: 170px;
 	height: 170px;
 	padding: 20px;
-	&::placeholder{
+
+	&::placeholder {
 		color: var(--grey, #7C7C7D);
 		font-size: 20px;
 		font-style: normal;
 		font-weight: 400;
 		line-height: normal;
-		@include max('md'){
+
+		@include max('md') {
 			color: #CECFCF;
 			font-size: 16px;
-			
+
 		}
 	}
-	@include max('md'){
+
+	@include max('md') {
 		margin-top: 8px;
 		min-height: 120px;
 		height: 120px;
 		padding: 14px;
 	}
 }
-.radio-wrap{
+
+.radio-wrap {
 	display: flex;
 	align-items: center;
 	margin-top: 11px;
 }
+
 .radio,
 .checkbox {
 	display: none;
@@ -369,6 +434,7 @@
 				&__pseudo {
 					border: none;
 					transition-duration: .3s;
+
 					&::before {
 						opacity: 1;
 					}
@@ -391,7 +457,8 @@
 		margin-right: 4px;
 		margin-top: -1px;
 		transition-duration: .3s;
-		@include max('md'){
+
+		@include max('md') {
 			margin-right: 10px;
 		}
 
@@ -417,13 +484,15 @@
 		line-height: normal;
 	}
 
-	
+
 }
-.btn--comment-form{
+
+.btn--comment-form {
 	margin-top: 48px;
 	max-width: 380px;
-	@include max('md'){
+
+	@include max('md') {
 		margin-top: 31px;
 	}
-	
+
 }
